<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="3dp"
    app:cardCornerRadius="5dp"
    app:contentPadding="10dp"
    >
    <LinearLayout
        android:background="@drawable/gradiant_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="right"
            android:src="@mipmap/delete_icon"
            android:layout_marginBottom="10dp"
            android:id="@+id/delete_drug_image"
            />
        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <ImageView
                android:id="@+id/drug_image"
                android:layout_width="0dp"
                android:layout_weight=".6"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center|left"


                />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="0dp"
                android:layout_weight="1.4"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/drug_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:gravity="right"
                        android:maxLength="12"
                        android:padding="16dp"
                        android:textColor="#fff"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:drawableRight="@drawable/drugname"
                        android:gravity="right"
                        android:text="@string/drug_name2"
                        android:maxLength="12"
                        android:padding="16dp"
                        android:textColor="@color/button_selectorcolor"
                        android:textSize="16dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dad8d8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/drug_concentrate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:gravity="right"
                        android:maxLength="12"
                        android:padding="16dp"
                        android:textColor="#fff"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:gravity="right"
                        android:text="@string/concentrateDrug_txt2"
                        android:maxLength="12"
                        android:padding="16dp"
                        android:drawableRight="@drawable/tark"
                        android:textColor="@color/button_selectorcolor"
                        android:textSize="16dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dad8d8" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/drug_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:gravity="right"
                        android:maxLength="12"
                        android:padding="16dp"
                        android:textColor="#fff"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:gravity="right"
                        android:text="@string/drug_type2"
                        android:maxLength="12"
                        android:padding="16dp"
                        android:drawableRight="@drawable/confirm_password"
                        android:textColor="@color/button_selectorcolor"
                        android:textSize="16dp" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dad8d8" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/update_drug_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:gravity="center"
                        android:maxLength="12"
                        android:padding="16dp"
                        android:text="تعديل"

                        android:textColor="#fff"
                        android:textSize="22dp" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dad8d8" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
</FrameLayout>